# work

./: CMakeLists.txt  README
sgf/: CMakeLists.txt
sgf/property_system/: property_list.cpp  property_list.h
testbed/: CMakeLists.txt  main.cpp
